Adding item details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         </activity>
         <activity
             android:name=".Activity.ItemDetailsActivity"
-            android:label="@string/title_activity_item_details"
-            android:theme="@style/AppTheme"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
