--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile "com.google.firebase:firebase-auth:9.0.2"
+    compile 'com.google.firebase:firebase-auth:11.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
