--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,21 @@
             android:name=".Activity.ItemDetailsActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".Activity.SignUpActivity" />
-        <activity android:name=".Activity.ResetPasswordActivity"></activity>
+        <activity android:name=".Activity.ResetPasswordActivity" />
+        <activity android:name=".Activity.LoginActivity" />
+
+        <service android:name=".services.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".services.FirebaseIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
