--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Activity.PopularActivity" />
+        <activity android:name=".Activity.StoresActivity" />
         <activity
             android:name=".Activity.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
