--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".Activity.SearchActivity" />
         <activity android:name=".Activity.StoresDetailsActivity"></activity>
+        <activity android:name=".Activity.CategoryDetailsActivity" />
     </application>
 
 </manifest>
