Implemented Splash Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".Activity.MainActivity"
-            android:screenOrientation="portrait">
+            android:name=".Activity.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +25,13 @@
         <activity
             android:name=".Activity.ItemDetailsActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity android:name=".Activity.MainActivity" />
+
         <activity android:name=".Activity.SignUpActivity" />
+
         <activity android:name=".Activity.ResetPasswordActivity" />
+
         <activity android:name=".Activity.LoginActivity" />
 
         <service android:name=".services.MyFirebaseMessagingService">
@@ -32,6 +39,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <service android:name=".services.FirebaseIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -43,9 +51,13 @@
             android:name=".Activity.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
             android:theme="@style/AppTheme" />
+
         <activity android:name=".Activity.SearchActivity" />
-        <activity android:name=".Activity.StoresDetailsActivity"></activity>
+
+        <activity android:name=".Activity.StoresDetailsActivity" />
+
         <activity android:name=".Activity.CategoryDetailsActivity" />
+
     </application>
 
 </manifest>
