--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,7 +84,7 @@
             android:name=".Activity.TransactionActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
-        <activity android:name=".Activity.EditProfileActivity" />
+        <activity android:name=".Activity.ChangePasswordActivity" />
         <activity android:name=".Activity.ProfileActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
