--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity android:name=".Activity.ChangePasswordActivity" />
-        <activity android:name=".Activity.ProfileActivity" />
+        <activity android:name=".Activity.EditProfileActivity" />
 
     </application>
 </manifest>
