--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Activity.ChangePasswordActivity" />
         <activity android:name=".Activity.EditProfileActivity" />
-        <activity android:name=".Activity.MobileVerificationActivity"></activity>
+        <activity android:name=".Activity.MobileVerificationActivity" />
+        <activity android:name=".Activity.MainActivity"></activity>
     </application>
 
 </manifest>
