--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'com.google.android.gms:play-services-vision:11.8.0'
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.asksira.android:loopingviewpager:1.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
