--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-vision:11.8.0'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.asksira.android:loopingviewpager:1.1.0'
+    implementation 'com.hbb20:ccp:2.1.4'
 }
 apply plugin: 'com.google.gms.google-services'
