--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
             android:name=".Activity.TransactionActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
-        <activity android:name=".Activity.ChangePasswordActivity" />
+        <activity android:name=".Activity.ChangePhoneActivity" />
         <activity android:name=".Activity.EditProfileActivity" />
         <activity android:name=".Activity.MobileVerificationActivity" />
         <activity android:name=".Activity.MobileLoginActivity" />
