--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
     repositories {
-        google()
         jcenter()
+        mavenLocal()
+        maven { url 'https://maven.google.com'  }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.google.gms:google-services:3.2.0'
-        
-
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:4.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,8 +14,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        //mavenLocal() must be listed at the top to facilitate testing
+        mavenLocal()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
