--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         jcenter()
         mavenLocal()
-        maven { url 'https://maven.google.com'  }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:4.0.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +19,7 @@ allprojects {
         //mavenLocal() must be listed at the top to facilitate testing
         mavenLocal()
         jcenter()
-        maven { url 'https://maven.google.com' }
+        google()
     }
 }
 
