--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.facebook.accountkit.ui.AccountKitActivity"
-            android:theme="@style/AppTheme" />
+        <activity android:name="com.facebook.accountkit.ui.AccountKitActivity" />
 
         <activity
             android:name=".activities.ItemDetailsActivity"
