--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -30,6 +30,10 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:animated-vector-drawable:27.1.1'
+    implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+
     // Testing dependencies
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -38,28 +42,29 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.asksira.android:loopingviewpager:1.1.0'
     implementation 'com.hbb20:ccp:2.1.4'
-
     implementation 'com.facebook.android:account-kit-sdk:4.+'
 
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
-    implementation 'com.google.android.gms:play-services-places:15.0.1'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
 
-    implementation 'android.arch.core:runtime:1.1.1'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
+//    implementation 'com.google.firebase:firebase-iid:16.2.0'
+
+//    implementation 'com.google.firebase:firebase-core:16.0.1'
+//    implementation 'com.google.firebase:firebase-auth:16.0.2'
+//    implementation 'com.google.firebase:firebase-database:16.0.1'
 
     //epoxy from airbnb
-//    implementation 'com.airbnb.android:epoxy:2.14.0'
+    implementation 'com.airbnb.android:epoxy:2.14.0'
     // Add the annotation processor if you are using Epoxy's annotations (recommended)
-//    annotationProcessor 'com.airbnb.android:epoxy-processor:2.14.0'
-//    implementation 'com.airbnb.android:lottie:2.5.5'
+    annotationProcessor 'com.airbnb.android:epoxy-processor:2.14.0'
+    implementation 'com.airbnb.android:lottie:2.5.5'
 
 }
 apply plugin: 'com.google.gms.google-services'
