--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.android.support:animated-vector-drawable:27.1.1'
     implementation 'com.android.support:support-compat:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     // Testing dependencies
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
