room booking dto changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,7 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".activities.DateRoomSelectActivity" />
         <activity android:name=".activities.BookingActivity" />
-        <activity android:name=".activities.BookingConfirmationActivity"></activity>
+        <activity android:name=".activities.RoomBookingActivity"></activity>
     </application>
 
 </manifest>
