--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,8 @@ dependencies {
 
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
+    implementation 'com.ornach.nobobutton:nobobutton:1.6'
+    implementation 'com.ornach.magicicon:magic-icon:1.6'
+
 }
 apply plugin: 'com.google.gms.google-services'
