working on profile

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.ornach.nobobutton:nobobutton:1.6'
     implementation 'com.ornach.magicicon:magic-icon:1.6'
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
+    implementation 'com.ornach.richtext:richtext:1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
