--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,7 +117,7 @@
         <activity android:name=".activities.BookingListActivity" />
         <activity android:name=".activities.RoomBookingActivity" />
         <activity android:name=".activities.BookingDetailsActivity" />
-        <activity android:name=".activities.AbousUsActivity" />
+        <activity android:name=".activities.AboutUsActivity" />
 
         <!--<activity android:name="com.yongbeom.aircalendar.AirCalendarDatePickerActivity"-->
             <!--android:theme="@style/Theme.AppCompat.NoActionBar" />-->
