--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'com.asksira.android:loopingviewpager:1.1.0'
     implementation 'com.hbb20:ccp:2.1.4'
     implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.ornach.nobobutton:nobobutton:1.6'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 
     implementation 'com.google.firebase:firebase-core:11.8.0'
