--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity android:name=".activities.ChangePhoneActivity" />
-        <activity android:name=".activities.EditProfileActivity" />
+        <activity android:name=".activities.EditProfileActivity2" />
         <activity android:name=".activities.MobileVerificationActivity" />
         <activity android:name=".activities.MobileLoginActivity" />
         <activity android:name=".activities.RegistrationActivity" />
