--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'com.hbb20:ccp:2.1.4'
     implementation 'com.facebook.android:account-kit-sdk:4.+'
     implementation 'com.ornach.nobobutton:nobobutton:1.6'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:27.0.0'
 
 
     implementation 'com.google.firebase:firebase-core:11.8.0'
@@ -80,6 +80,9 @@ dependencies {
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.ornach.richtext:richtext:1.0'
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
+
+    implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
