--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.PopularActivity"></activity>
+        <activity android:name=".activities.RoomListActivity"></activity>
+        <activity android:name=".activities.PopularActivity" />
         <activity android:name=".activities.RoomSearchActivity" />
         <activity
             android:name=".activities.FullscreenActivity"
@@ -82,7 +83,7 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".activities.SplashActivity2" />
         <activity
-            android:name=".activities.RoomListActivity"
+            android:name=".activities.HotelListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity
