--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.inflack.unitel"
+        applicationId "mastersunny.rooms"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
@@ -82,6 +82,7 @@ dependencies {
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
 
     implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
 
 
 }
