--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,8 +96,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activities.ChangePhoneActivity" />
         <activity android:name=".activities.EditProfileActivity2" />
-        <activity android:name=".activities.MobileVerificationActivity" />
-        <activity android:name=".activities.MobileLoginActivity" />
+        <activity android:name=".Fragments.MobileVerificationFragment" />
+        <activity android:name=".Fragments.MobileLoginFragment" />
         <activity android:name=".activities.RegistrationActivity" />
         <activity android:name=".activities.TransactionDetailsActivity" />
         <activity android:name=".activities.LoginActivity" /> <!-- Firebase Notifications -->
